masonry_widgets/src/widgets/tests/snapshots/masonry_widgets__widgets__tests__lifecycle_basic__app_creation.snap
---
source: masonry/src/widget/tests/lifecycle_basic.rs
assertion_line: 22
expression: record
---
[
    RC,
    U(
        WidgetAdded,
    ),
    Layout(
        0.0W×0.0H,
    ),
    Compose,
    Layout(
        400.0W×400.0H,
    ),
    Compose,
]
