masonry_widgets/src/widgets/tests/snapshots/masonry_widgets__widgets__tests__lifecycle_basic__impl.snap
---
source: masonry/src/widget/tests/lifecycle_basic.rs
assertion_line: 17
expression: record

---
[
    L(
        WidgetAdded,
    ),
    L(
        BuildFocusChain,
    ),
    E(
        WindowConnected,
    ),
    Layout(
        0.0W×0.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
    E(
        WindowSize(
            400.0W×400.0H,
        ),
    ),
    Layout(
        400.0W×400.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
]
